tests/ui/repr/invalid-repr-on-structs-74082.stderr
error[E0517]: attribute should be applied to an enum
  --> $DIR/invalid-repr-on-structs-74082.rs:4:8
   |
LL | #[repr(i128)]
   |        ^^^^
LL | struct Foo;
   | ----------- not an enum

error[E0517]: attribute should be applied to an enum
  --> $DIR/invalid-repr-on-structs-74082.rs:7:8
   |
LL | #[repr(u128)]
   |        ^^^^
LL | struct Bar;
   | ----------- not an enum

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0517`.
